force-app/main/default/objects/User/fields/WorkLocation__c.field-meta.xml
<CustomField>
    <fullName>WorkLocation__c</fullName>
    <label>Work Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>