force-app/main/default/objects/User/fields/WWFOCoverage__c.field-meta.xml
<CustomField>
    <fullName>WWFOCoverage__c</fullName>
    <label>WWFO Coverage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>