force-app/main/default/objects/User/fields/WWFOCoverageDetails__c.field-meta.xml
<CustomField>
    <fullName>WWFOCoverageDetails__c</fullName>
    <label>WWFO Coverage Details</label>
    <length>80</length>
    <type>Text</type>
</CustomField>