force-app/main/default/objects/User/fields/WWFOFunction__c.field-meta.xml
<CustomField>
    <fullName>WWFOFunction__c</fullName>
    <label>WWFO Function</label>
    <length>25</length>
    <type>Text</type>
</CustomField>