force-app/main/default/objects/User/fields/WWFORegion__c.field-meta.xml
<CustomField>
    <fullName>WWFORegion__c</fullName>
    <label>WWFO Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>