force-app/main/default/objects/User/fields/WWFORegionSupport__c.field-meta.xml
<CustomField>
    <fullName>WWFORegionSupport__c</fullName>
    <label>WWFO Region Support</label>
    <length>30</length>
    <type>Text</type>
</CustomField>