force-app/main/default/objects/User/fields/WWFORole__c.field-meta.xml
<CustomField>
    <fullName>WWFORole__c</fullName>
    <label>WWFO Role</label>
    <length>25</length>
    <type>Text</type>
</CustomField>