force-app/main/default/objects/User/listViews/All_Active_Internal_Users2.listView-meta.xml
<ListView>
    <fullName>All_Active_Internal_Users2</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>All Active Internal Users wo Role</label>
    <language>en_US</language>
</ListView>