force-app/main/default/objects/User/listViews/All_Support_Mgr_and_NV_Agents.listView-meta.xml
<ListView>
    <fullName>All_Support_Mgr_and_NV_Agents</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Support Manager</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>NV Agent</value>
    </filters>
    <label>All Support Mgr and NV Agents</label>
    <language>en_US</language>
</ListView>