force-app/main/default/objects/User/listViews/Auto_Users_Login_History.listView-meta.xml
<ListView>
    <fullName>Auto_Users_Login_History</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Sales Rep - Auto</value>
    </filters>
    <label>Auto Users Login History</label>
    <language>en_US</language>
    <sharedTo>
        <group>Automotive_Sales_Operations</group>
    </sharedTo>
</ListView>