force-app/main/default/objects/User/listViews/GRID_VGX_Partners.listView-meta.xml
<ListView>
    <fullName>GRID_VGX_Partners</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.IS_PARTNER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>GRID VGX</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>VGX Wow</value>
    </filters>
    <label>GRID VGX Partners</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>