force-app/main/default/objects/User/listViews/MDF_EMEA_Internal_Users_V2.listView-meta.xml
<ListView>
    <fullName>MDF_EMEA_Internal_Users_V2</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NVInternalCRMGeneric</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>MDF</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>EMEA</value>
    </filters>
    <label>MDF EMEA Internal Users - V2</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>