force-app/main/default/objects/User/listViews/NSC_Users.listView-meta.xml
<ListView>
    <fullName>NSC_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>nsc-nvidia.com</value>
    </filters>
    <label>NSC Users</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>