force-app/main/default/objects/User/listViews/NVIDIA_Active_Users_Only.listView-meta.xml
<ListView>
    <fullName>NVIDIA_Active_Users_Only</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>webhelp,nvidia,NVIDIA,forcontact.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <label>NVIDIA Active Users Only</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>